[tool.poetry]
name = "dartwork-mplstyle"
version = "0.1.0"
description = ""
authors = ["Sangwon <lsw91.main@gmail.com>"]
readme = "README.md"
packages = [{include = "dartwork_mplstyle"}]

[tool.poetry.dependencies]
python = "^3.10"
matplotlib = "^3.6.2"
numpy = "^1.24.1"
ipykernel = "^6.19.4"
proplot = "^0.9.5"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
