[tool.poetry]
name = "dartwork-mplstyle"
version = "0.1.0"
description = ""
authors = ["Sangwon <lsw91.main@gmail.com>"]
readme = "README.md"
packages = [{include = "dartwork_mplstyle"}]

[tool.poetry.dependencies]
python = "^3.9"
matplotlib = "=3.4.3"
numpy = "=1.21.0"
ipykernel = "^6.19.4"
proplot = "^0.9.5"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
